--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,26 @@
+body{
+  width:80%;
+  background-image:url("../img/cover50.jpg");
+  background-repeat:no-repeat;
+  background-position:top right;
+  background-size:auto;
+}
+
+.center{
+  margin:auto;
+  padding:10px;
+}
+
 .icon-color{
   color:black;
+}
+
+.icon-color2{
+  color:gray;
+}
+
+@media(max-width:600px){
+  body{
+    width:100%;
+  }
 }
